--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ h1 {
     border: none;
     outline: none;
     border-radius: 3px;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 .recherche-poke label {
@@ -44,4 +46,19 @@ h1 {
     transform: translateY(-50%);
     padding-left: 8px;
     transition: all 0.3s ease-in;
+}
+
+.recherche-poke button {
+    margin-left: 5px;
+    padding: 15px;
+    cursor: pointer;
+}
+
+/* animation input */
+
+.recherche-poke:focus-within label,
+.recherche-poke.active-input label {
+    top: -15px;
+    padding-left: 5px;
+    color: #f1f1f1;
 }
